force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/AcctPlanCollectionOrPaymentCurrency__c.object-meta.xml
<CustomObject>
    <label>AccountPlanCollectionOrPaymentCurrency</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AcctPlanCollectionOrPaymentCurrency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountPlanCollectionOrPaymentCurrency</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>