force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/fields/AcctPlanWallet__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanWallet__c</fullName>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>AccountPlanCollectionOrPaymentCurrency</relationshipLabel>
    <relationshipName>AccountPlanCollectionOrPaymentCurrency</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>