force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/fields/CCY__c.field-meta.xml
<CustomField>
    <fullName>CCY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CCY</description>
    <inlineHelpText>CCY</inlineHelpText>
    <label>Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>AccountPlanCollectionOrPaymentCurrency</relationshipLabel>
    <relationshipName>AccountPlanCollectionOrPaymentCurrency</relationshipName>
    <type>Lookup</type>
</CustomField>