force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/fields/CollectionAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>CollectionAmtPerYear__c</fullName>
    <description>Amount per year (Unit : Baht)</description>
    <formula>if(isnull( AcctPlanWallet__r.TotalExportAmtPerYear__c ),0,AcctPlanWallet__r.TotalExportAmtPerYear__c) *

  (CollectionPortion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount per year (Unit : Baht)</inlineHelpText>
    <label>CollectionAmtPerYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>