force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/fields/CollectionIsDeleted__c.field-meta.xml
<CustomField>
    <fullName>CollectionIsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CollectionIsDeleted</label>
    <type>Checkbox</type>
</CustomField>