force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/fields/CollectionPortion__c.field-meta.xml
<CustomField>
    <fullName>CollectionPortion__c</fullName>
    <description>Portion (%) : ใน % ที่เป็นรายได้จากการส่งออก ซึ่งเป็น baht currency นั้นมีสัดส่วนเงินรับจากสกุลต่างๆ ในสัดส่วนกีเปอร์เซ็นต์</description>
    <inlineHelpText>Portion (%) : ใน % ที่เป็นรายได้จากการส่งออก ซึ่งเป็น baht currency นั้นมีสัดส่วนเงินรับจากสกุลต่างๆ ในสัดส่วนกีเปอร์เซ็นต์</inlineHelpText>
    <label>Portion (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>