force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <label>Currency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>