force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/fields/PaymentAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmtPerYear__c</fullName>
    <description>Amount per year (Unit : Baht)</description>
    <formula>if(isnull(AcctPlanWallet__r.TotalPaymentImportAmtPerYear__c) ,0,AcctPlanWallet__r.TotalPaymentImportAmtPerYear__c) * (PaymentPortion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount per year (Unit : Baht)</inlineHelpText>
    <label>PaymentAmtPerYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>