force-app/main/default/objects/AcctPlanCollectionOrPaymentCurrency__c/fields/PaymentIsDeleted__c.field-meta.xml
<CustomField>
    <fullName>PaymentIsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaymentIsDeleted</label>
    <type>Checkbox</type>
</CustomField>